<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".ui.activity.WifiActivity">

    <hf.car.wifi.video.ui.custom.TopToolBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:center_title="@string/tv_wifi_page"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp54"
        android:src="@drawable/icon_wifi_disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp22"
        android:text="@string/tv_wifi_connecting"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_wifi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp35"
        android:layout_marginTop="@dimen/dp18"
        android:layout_marginEnd="@dimen/dp35"
        android:text="@string/tv_wifi_message"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/sp14"
        app:layout_constraintTop_toBottomOf="@id/tv_wifi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp35"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp35"
        android:text="@string/tv_wifi_message2"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/sp14"
        app:layout_constraintTop_toBottomOf="@id/tv_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_wifi"
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp44"
        android:layout_marginTop="@dimen/dp40"
        android:background="@drawable/common_button"
        android:text="@string/tv_wifi_connect"
        android:textColor="@color/white"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message2" />
</androidx.constraintlayout.widget.ConstraintLayout>