<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".ui.activity.ImageCameraActivity">

    <hf.car.wifi.video.ui.custom.TopToolBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:center_title="@string/tv_image_camera_page"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/view_face"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp300"
        android:layout_marginTop="@dimen/dp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <androidx.camera.view.PreviewView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_camera_circle" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp30"
        android:text="@string/tv_camera_message"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_face" />

    <hf.car.wifi.video.ui.custom.DrawableCenterTextView
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp16"
        android:background="@drawable/common_button"
        android:drawablePadding="@dimen/dp10"
        android:gravity="center"
        android:text="@string/tv_take_camera"
        android:textColor="@color/white"
        android:textSize="@dimen/sp14"
        app:drawableLeftCompat="@drawable/icon_camera"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>