<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top"
    tools:context=".ui.activity.ModifyFaceActivity">

    <hf.car.wifi.video.ui.custom.TopToolBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:center_title="@string/tv_person_info_page"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_face"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp380"
        android:layout_marginStart="@dimen/dp12"
        android:layout_marginTop="@dimen/dp14"
        android:layout_marginEnd="@dimen/dp12"
        android:background="@color/white"
        android:scaleType="centerInside"
        android:src="@drawable/default_user_image"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:shapeAppearanceOverlay="@style/roundedCornerImageStyle2_r12" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp12"
        android:layout_marginEnd="@dimen/dp12"
        android:background="@drawable/bg_white_bottom_r12"
        app:layout_constraintTop_toBottomOf="@id/img_face">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp12"
            android:gravity="center_vertical"
            android:text="@string/tv_person_name_s"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp12"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp12"
            android:gravity="center_vertical"
            android:text="@string/tv_person_number_s"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp12"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>